# iron_tanktics

./: Cargo.toml  LICENSE  README.md
assets/: attributions.md
src/: main.rs
src/app/: map.rs  mod.rs  tank.rs
src/app/plugins/: mod.rs  setup.rs
