[package]
name = "iron_tanktics"
version = "0.1.0"
edition = "2021"


[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3  # higher optimization for dependencies (to compensate for the lack of optimization in the main code)


[dependencies]
dev_utils ={ version = "0.0.*" }

bevy = { version = "0.*" }
image = { version = "0.*" }
winit = { version = "0.*" }

